@@ -12,8 +12,8 @@ feature(dds4ccm_splice) : dds4ccm_skel, dds4ccm_lem_stub {
 }
 
 feature(dds4ccm_ndds) : dds4ccm_skel, dds4ccm_lem_stub, nddslib {
-  after += CIAO_DDS4CCM_DDS_Impl
-  libs += CIAO_DDS4CCM_DDS_Impl
+  after += CIAO_DDS4CCM_DDS_Impl CIAO_DDS4CCM_DDS_NDDS
+  libs += CIAO_DDS4CCM_DDS_Impl CIAO_DDS4CCM_DDS_NDDS
 }
 
 feature(!dds4ccm_opendds, !dds4ccm_ndds, !dds4ccm_splice) {
